package com.example.telecom.paris;

public interface ProcessedVertexesSet {
	
	void add( Vertex vertex );
	
	boolean contains( Vertex vertex );
}
