package com.example.telecom.paris.services.processor;

public class Dijkstra {
    public static void main(String[] args) {

        System.out.println("Dijkstra");

    }
}