@startuml

title __TP05DIJKSTRA's Class Diagram__\n

  namespace com.example.telecom.paris {
    namespace interfaces {
      interface com.example.telecom.paris.interfaces.Distance {
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace interfaces {
      interface com.example.telecom.paris.interfaces.Graph {
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace interfaces {
      interface com.example.telecom.paris.interfaces.MinDistance {
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace interfaces {
      interface com.example.telecom.paris.interfaces.ProcessedVertexesSet {
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace interfaces {
      interface com.example.telecom.paris.interfaces.ShortestPaths {
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace interfaces {
      interface com.example.telecom.paris.interfaces.Vertex {
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace processor {
      class com.example.telecom.paris.processor.Dijkstra {
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace services {
      class com.example.telecom.paris.services.Edge {
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace services {
      class com.example.telecom.paris.services.Graph {
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace services {
      class com.example.telecom.paris.services.MinDistance {
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace services {
      class com.example.telecom.paris.services.ShortestPaths {
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace services {
      class com.example.telecom.paris.services.Vertex {
      }
    }
  }
  

  namespace com.example.telecom.paris {
    namespace services {
      class com.example.telecom.paris.services.VertexesSet {
      }
    }
  }
  

  com.example.telecom.paris.services.Edge o-- com.example.telecom.paris.interfaces.Vertex : vertex1
  com.example.telecom.paris.services.Edge o-- com.example.telecom.paris.interfaces.Vertex : vertex2
  com.example.telecom.paris.services.Graph .up.|> com.example.telecom.paris.interfaces.Distance
  com.example.telecom.paris.services.Graph .up.|> com.example.telecom.paris.interfaces.Graph
  com.example.telecom.paris.services.MinDistance .up.|> com.example.telecom.paris.interfaces.MinDistance
  com.example.telecom.paris.services.ShortestPaths .up.|> com.example.telecom.paris.interfaces.ShortestPaths
  com.example.telecom.paris.services.Vertex .up.|> com.example.telecom.paris.interfaces.Vertex
  com.example.telecom.paris.services.Vertex o-- com.example.telecom.paris.interfaces.Graph : graph
  com.example.telecom.paris.services.VertexesSet .up.|> com.example.telecom.paris.interfaces.ProcessedVertexesSet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
